# RWHmodel

./: .gitignore  DOCUMENTATION.md  README.md  SETUP_GUIDE.md  environment.yml  pyproject.toml
.github/workflows/: tests-conda.yml  tests-uv.yml
RWHmodel/: RWHmodel.py  __init__.py  analysis.py  config.py  hydro_model.py  model.py  plot.py  reservoir.py  timeseries.py  utils.py
config/: default_area_characteristics.ini
examples/: Example_runfile_batch.py  Example_runfile_single.py
examples/data/: demand_example_daily.csv  forcing_example_daily.csv
examples/example_data/: demand_example_daily.csv  demand_example_hourly.csv  forcing_example_daily.csv
examples/example_toml_files/: example_setup_batch_run.toml  example_setup_single_run.toml
tests/: test_analysis.py  test_hydro_model.py  test_model.py  test_plot.py  test_reservoir.py  test_timeseries.py  test_utils.py
tests/data/: demand_test.csv  forcing_test.csv
tests/input/: demand_test.csv  forcing_test.csv  setup_batch_test.toml  setup_single_test.toml
