

[build-system]
requires = ["flit_core >=3.4.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "RWHmodel"
authors = [
    {name = "Daan Rooze", email = "daan.rooze@deltares.nl"},
    {name = "Laura Nougues", email = "laura.nougues@deltares.nl"}
]
dependencies = [
    "pandas",            # Dataframes
    "tomli",             # parsing toml files
    "tomli-w",           # writing toml files
    "toml",              # parsing toml files
    "matplotlib",        # plotting
    "scipy"              # statistical modules
    "tqdm"               # progress bar
]

version = "0.1.0"
description = "A flexible model for determining potential for rainwater harvesting"

requires-python = ">=3.9"
classifiers = [
    # https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
doc = []
dev = [
    "black",            # code formatting
    "ruff",             # code linting
    "pre-commit",       # pre-commit hooks
]
test = [
    "pytest>=2.7.3",    # testing framework
    "pytest-cov",       # pytest plugin for coverage reports
]



[project.urls]
Documentation = "https://daanrooze.github.io/rwhmodel"
Source = "https://github.com/daanrooze/rwhmodel"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
# enable pydocstyle (E), pyflake (F) and isort (I), pytest-style (PT)
select = ["E", "F", "I", "PT", "D"]
ignore-init-module-imports = true
ignore = ["D211", "D213", "E741", "D105", "E712"]
exclude = ["docs"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.flit.sdist]
include = ["RWHmodel"]
exclude = ["docs", "examples", "tests", ".github"]


[tool.mypy]
packages = [
"RWHmodel"    
]
exclude = [
    "docs",
]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
strict_concatenate = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
