

[build-system]
requires = ["flit_core >=3.4.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "RWHmodel"
authors = [
    {name = "Daan Rooze", email = "daan.rooze@deltares.nl"},
    {name = "Laura Nougues", email = "laura.nougues@deltares.nl"}
]
dependencies = [
    "pandas>=1.5.0",           # Dataframes
    "tomli>=2.0.0;python_version<'3.11'",  # parsing toml files (built-in for 3.11+)
    "tomli-w>=1.0.0",          # writing toml files
    "toml>=0.10.2",            # parsing toml files
    "matplotlib>=3.5.0",       # plotting
    "scipy>=1.8.0",            # statistical modules
    "tqdm>=4.62.0"             # progress bar
]

version = "0.1.0"
description = "A flexible model for determining potential for rainwater harvesting"

requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    # https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
doc = []
dev = []

[project.dependency-groups]
dev = [
    "black>=23.0.0",           # code formatting
    "ruff>=0.1.0",             # code linting
    "pre-commit>=3.0.0",       # pre-commit hooks
]
test = [
    "pytest>=7.0.0",           # testing framework
    "pytest-cov>=4.0.0",       # pytest plugin for coverage reports
]



[project.urls]
Documentation = "https://daanrooze.github.io/rwhmodel"
Source = "https://github.com/daanrooze/rwhmodel"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
# enable pydocstyle (E), pyflake (F) and isort (I), pytest-style (PT)
select = ["E", "F", "I", "PT", "D"]
ignore-init-module-imports = true
ignore = ["D211", "D213", "E741", "D105", "E712"]
exclude = ["docs"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.flit.sdist]
include = ["RWHmodel"]
exclude = ["docs", "examples", "tests", ".github"]


[tool.mypy]
packages = [
"RWHmodel"    
]
exclude = [
    "docs",
]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
strict_concatenate = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]

